Fix typo in 91 whatsnew page.

--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -98,7 +98,7 @@
           {{ _('Protect Your Privacy')}}
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-10">
-          {{ _('Whether its work or play, you deserve to have privacy when you are online. A VPN, Virtual Private Network, can help you create a secure, private connection to the internet. So that when you are traveling, connecting to WiFi, or simply want more online security - you know that your information is protected from prying eyes.') }}
+          {{ _('Whether it’s work or play, you deserve to have privacy when you are online. A VPN, Virtual Private Network, can help you create a secure, private connection to the internet. So that when you are traveling, connecting to WiFi, or simply want more online security - you know that your information is protected from prying eyes.') }}
         </p>
         <a href="https://www.mozilla.org/products/vpn/?utm_source=thunderbird&utm_medium=tbwnp&utm_campaign=2021" class="btn-body self-start" target="_blank">
           {{_('Learn More')}} <span>{{ svg('chevron-right') }}</span>
