--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -40,6 +40,68 @@
     <span class="header-line flex-1"></span>
   </section>
 
+<section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
+    <aside>
+      <h3 class="header-section" id="release-engineer">
+        <a class="anchor" aria-hidden="true" href="#release-engineer">
+          {{ svg('link') }}
+        </a>
+        <span>{{ svg('developer') }}</span>
+        <aside class="flex flex-col">
+          {{ _('Thunderbird Release Engineer')}}
+          <small class="font-normal font-md tracking-normal normal-case">
+            {{ _('Full Time / Remote') }}
+          </small>
+        </aside>
+      </h3>
+      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
+        {{ _('Thunderbird is looking for a multi-skilled self-starter to work on release engineering, and partly on operating the cloud based web infrastructure around Thunderbird. You will be working in close cooperation with our release engineer, infra team lead and other staff, as well as with community members.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
+        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
+      </p>
+    </aside>
+    <aside>
+      <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
+      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
+        <li>
+          {{ _('Solid scripting knowledge (shell, Python).') }}
+        </li>
+        <li>
+          {{ _('Ability to debug build and compile issues.') }}
+        </li>
+        <li>
+          {{ _('Familiarity with using distributed version control systems (primarily Mercurial and Git).') }}
+        </li>
+        <li>
+          {{ _('Proven track record of finishing projects.') }}
+        </li>
+        <li>
+          {{ _('Devops knowledge for cloud based setups (AWS, Linode etc.)') }}
+        </li>
+      </ul>
+      <h4 class="subheader-section">{{ _('Bonus points for:') }}</h4>
+      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
+        <li>
+          {{ _('A working knowledge of C/C++, Rust, and/or Javascript.') }}
+        </li>
+        <li>
+          {{ _('Experience with <a href="https://docs.taskcluster.net/">Taskcluster</a>.') }}
+        </li>
+        <li>
+          {{ _('Low level system experience on Linux, Windows, and/or Mac.') }}
+        </li>
+        <li>
+          {{ _('Experience with legacy build systems such as make, or modern ones such as Bazel, Buck or Blaze.') }}
+        </li>
+      </ul>
+      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
+    </aside>
+  </section>
+
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
       <h3 class="header-section" id="senior-software-engineer">
