Update careers page copy.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -48,20 +48,20 @@
         </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
-          {{ _('Thunderbird Release Engineer')}}
+          {{ _('Thunderbird Build &amp; Release Engineer')}}
           <small class="font-normal font-md tracking-normal normal-case">
             {{ _('Full Time / Remote') }}
           </small>
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('Thunderbird is looking for a multi-skilled self-starter to work on release engineering, and partly on operating the cloud based web infrastructure around Thunderbird. You will be working in close cooperation with our release engineer, infra team lead and other staff, as well as with community members.') }}
+        {{ _('Thunderbird is looking for a multi-skilled self-starter to work on release engineering. You will be working in close cooperation with our current release engineer, infra team lead and other staff, as well as with community members.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
         {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
+        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and <strong>engineering</strong> to ship beta and release builds.') }}
       </p>
     </aside>
     <aside>
