Update build engineer position on careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -61,14 +61,35 @@
         {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and <strong>engineering</strong> to ship beta and release builds.') }}
+        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide.') }}
       </p>
     </aside>
     <aside>
+      <h4 class="subheader-section">{{ _('What you'll get to do:') }}</h4>
+      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
+        <li>
+          {{ _('Work with a geographically-distributed development team.') }}
+        </li>
+        <li>
+          {{ _('Improve and maintain the continuous integration systems that developers rely on to accelerate productivity.') }}
+        </li>
+        <li>
+          {{ _('Develop the build and release systems used to make final builds available to users.') }}
+        </li>
+        <li>
+          {{ _('Collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and <strong>engineering</strong> to ship beta and release builds.') }}
+        </li>
+        <li>
+          {{ _('Adapt changes made by the Firefox engineering teams for Thunderbird.') }}
+        </li>
+      </ul>
       <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
           {{ _('Solid scripting knowledge (shell, Python).') }}
+        </li>
+        <li>
+          {{ _('Dedication to open source and open standards.') }}
         </li>
         <li>
           {{ _('Ability to debug build and compile issues.') }}
@@ -81,6 +102,9 @@
         </li>
         <li>
           {{ _('Devops knowledge for cloud based setups (AWS, Linode etc.)') }}
+        </li>
+        <li>
+          {{ _('A mission of making a concrete positive impact on the day to day communication experience for tens of millions of users.') }}
         </li>
       </ul>
       <h4 class="subheader-section">{{ _('Bonus points for:') }}</h4>
@@ -96,6 +120,9 @@
         </li>
         <li>
           {{ _('Experience with legacy build systems such as make, or modern ones such as Bazel, Buck or Blaze.') }}
+        </li>
+        <li>
+          {{ _('Previous open source engagement.') }}
         </li>
       </ul>
       <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
