--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -65,7 +65,7 @@
       </p>
     </aside>
     <aside>
-      <h4 class="subheader-section">{{ _('What you'll get to do:') }}</h4>
+      <h4 class="subheader-section">{{ _('What you’ll get to do:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
           {{ _('Work with a geographically-distributed development team.') }}
