Use matrix.to links in get involved

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -121,19 +121,19 @@
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
-              {{ _('<a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org">#thunderbird</a> - For general questions and support.') }}
+              {{ _('<a href="https://matrix.to/#/#thunderbird:mozilla.org?web-instance%5Belement.io%5D=chat.mozilla.org">#thunderbird</a> - For general questions and support.') }}
             </li>
             <li>
-              {{ _('<a href="https://chat.mozilla.org/#/room/#maildev:mozilla.org">#maildev</a> - For hacking on Thunderbird.') }}
+              {{ _('<a href="https://matrix.to/#/#maildev:mozilla.org?web-instance%5Belement.io%5D=chat.mozilla.org">#maildev</a> - For hacking on Thunderbird.') }}
             </li>
             <li>
-              {{ _('<a href="https://chat.mozilla.org/#/room/#tb-addon-developers:mozilla.org">#tb-addon-developers</a> - For questions and discussion about Thunderbird add-on development.') }}
+              {{ _('<a href="https://matrix.to/#/#tb-addon-developers:mozilla.org?web-instance%5Belement.io%5D=chat.mozilla.org">#tb-addon-developers</a> - For questions and discussion about Thunderbird add-on development.') }}
             </li>
             <li>
-              {{ _('<a href="https://chat.mozilla.org/#/room/#openpgp:mozilla.org">#openpgp</a> - For OpenPGP discussion.') }}
+              {{ _('<a href="https://matrix.to/#/#openpgp:mozilla.org?web-instance%5Belement.io%5D=chat.mozilla.org">#openpgp</a> - For OpenPGP discussion.') }}
             </li>
             <li>
-              {{ _('<a href="https://chat.mozilla.org/#/room/#tb-support-crew:mozilla.org">#tb-support-crew</a> - For management of Thunderbird support.') }}
+              {{ _('<a href="https://matrix.to/#/#tb-support-crew:mozilla.org?web-instance%5Belement.io%5D=chat.mozilla.org">#tb-support-crew</a> - For management of Thunderbird support.') }}
             </li>
         </article>
       </aside>
