Add anti-discrimination statement
It's present beneath the last two open positions, but not the first one. This creates confusion and we've had some people express concern over that.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -125,6 +125,9 @@
           {{ _('Previous open source engagement.') }}
         </li>
       </ul>
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
+      </p>
       <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
     </aside>
   </section>
