Remove references to Lightning on main page

--- a/website/index.html
+++ b/website/index.html
@@ -105,14 +105,14 @@
   <section class="pt-20 pb-10 flex bg-calendar lg:pr-20">
     <section class="flex justify-between mx-auto">
       <aside class="hidden lg:flex flex-1 -ml-20">
-        {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Lightning Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
+        {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Thunderbird Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
       </aside>
 
       <aside class="flex flex-col flex-1 lg:max-w-md mr-8 ml-8 lg:ml-16 lg:mr-16 lg:pt-12">
         <h3 class="header-section">
           <span>{{ svg('calendar') }}</span>
           <aside class="flex flex-col">
-            {{ _('Lightning Calendar')}}
+            {{ _('Calendar')}}
             <small class="font-normal font-md tracking-normal normal-case">
               {{ _('Organize your life — it’s about time!') }}
             </small>
@@ -128,7 +128,7 @@
           <a href="{{ url('calendar') }}" class="btn-body">{{_('Explore Features')}}
             <span>{{ svg('chevron-right') }}</span>
           </a>
-          <a href="https://addons.thunderbird.net" class="btn-body btn-secondary ml-4">{{_('Explore More Add-ons')}}
+          <a href="https://addons.thunderbird.net" class="btn-body btn-secondary ml-4">{{_('Explore Add-ons')}}
             <span>{{ svg('chevron-right') }}</span>
           </a>
         </p>
