Update careers page apply mechanism and remove closed positions for now.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -31,6 +31,9 @@
         <p class="font-lg tracking-wider leading-loose mb-6">
           {{ _('Thunderbird is a free and open source email, newsfeed, chat, and calendaring client, that’s easy to set up and customize. One of the core principles of Thunderbird is the use and promotion of open standards - this focus is a rejection of our world of closed platforms and services that can’t communicate with each other. We want our users to have freedom and choice in how they communicate.') }}
         </p>
+        <p class="font-lg tracking-wider leading-loose mb-6">
+          {{ _('We are a fully remote and distributed team. You will work with staff and community members from all over the globe. We are key contributors to open source, allowing you to show your skills to the world and learn from a diverse community.') }}
+        </p>
     </section>
   </section>
 
@@ -128,162 +131,7 @@
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
         {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
       </p>
-      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
-    </aside>
-  </section>
-
-  <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
-    <aside>
-      <h3 class="header-section" id="senior-software-engineer">
-        <a class="anchor" aria-hidden="true" href="#senior-software-engineer">
-          {{ svg('link') }}
-        </a>
-        <span>{{ svg('developer') }}</span>
-        <aside class="flex flex-col">
-          {{ _('Senior Software Engineer')}}
-          <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote') }}
-          </small>
-        </aside>
-      </h3>
-      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('The Thunderbird team is looking to hire a hardworking senior software engineer. You will help update our code base and craft new features for this already very popular cross platform email client. We’re committed to moving our code base over to using primarily web technologies, and you’ll have a significant part to play in this effort. Contrary to many opportunities elsewhere, you have the opportunity to directly utilize the most groundbreaking developments in the browser engine.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('As an engineer at Thunderbird, you will be working with our existing staff and community members from all over the globe. We are key contributors to open source, allowing you to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. We expect excellent written communication skills so as to foster strong work coordination over email, video conferencing, Matrix, and Bugzilla.') }}
-      </p>
-    </aside>
-    <aside>
-      <h4 class="subheader-section">{{ _('You could end up working on:') }}</h4>
-      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
-        <li>
-          {{ _('Updating the application on UX and technical levels.') }}
-        </li>
-        <li>
-          {{ _('Code and feature improvements in the integrated calendar.') }}
-        </li>
-        <li>
-          {{ _('Mail protocol implementations or re-implementations in JavaScript.') }}
-        </li>
-        <li>
-          {{ _('Crafting tests for operational performance, and addressing performance bottlenecks.') }}
-        </li>
-        <li>
-          {{ _('Integrating some of the best parts of the more popular add-ons into core.') }}
-        </li>
-        <li>
-          {{ _('...and <a href="https://mail.mozilla.org/pipermail/tb-planning/2020-October/008030.html">much more</a>.') }}
-        </li>
-      </ul>
-    </aside>
-    <aside>
-      <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
-      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
-        <li>
-          {{ _('Dedication to open source and open standards.') }}
-        </li>
-        <li>
-          {{ _('A mission of making a concrete positive impact on the day to day communication experience for tens of millions of users.') }}
-        </li>
-        <li>
-          {{ _('Strong understanding of web technologies.') }}
-        </li>
-        <li>
-          {{ _('About five years of validated experience developing with JavaScript/HTML/CSS.') }}
-        </li>
-        <li>
-          {{ _('Knowledge of C/C++.') }}
-        </li>
-        <li>
-          {{ _('Good problem-solving skills.') }}
-        </li>
-        <li>
-          {{ _('Familiarity with add-ons and previous open source engagement is a plus.') }}
-        </li>
-        <li>
-          {{ _('Experience with calendar systems would be desired, but not a must.') }}
-        </li>
-      </ul>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
-      </p>
-      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
-    </aside>
-  </section>
-
-  <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
-    <aside>
-      <h3 class="header-section" id="software-engineer">
-        <a class="anchor" aria-hidden="true" href="#software-engineer">
-          {{ svg('link') }}
-        </a>
-        <span>{{ svg('developer') }}</span>
-        <aside class="flex flex-col">
-          {{ _('Software Engineer')}}
-          <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote / 2 Available Openings') }}
-          </small>
-        </aside>
-      </h3>
-      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('The Thunderbird team is growing, and we are looking to hire a dedicated and hardworking engineer to work with us on our ongoing maintenance work as well as feature development.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We’re committed to moving our code base over to using primarily web technologies, and you’ll be an important part of this effort. Contrary to many learning opportunities elsewhere, you’ll have the opportunity to utilize the most groundbreaking developments in the browser engine.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('As an engineer at Thunderbird, you will work with our existing staff and community members from all over the globe. We are key contributors to open source, allowing you to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
-      </p>
-      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. We expect excellent written communication skills so as to foster strong work coordination over email, video conferencing, Matrix, and Bugzilla.') }}
-      </p>
-    </aside>
-    <aside>
-      <h4 class="subheader-section">{{ _('You could end up working on:') }}</h4>
-      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
-        <li>
-          {{ _('Localization, moving Thunderbird to using Fluent.') }}
-        </li>
-        <li>
-          {{ _('The ongoing effort of converting our code base towards web technology compliance.') }}
-        </li>
-        <li>
-          {{ _('Converting the filtering code implementation to JavaScript, and async operation.') }}
-        </li>
-        <li>
-          {{ _('Integrating some of the best parts of the more popular add-ons into core.') }}
-        </li>
-        <li>
-          {{ _('...and <a href="https://mail.mozilla.org/pipermail/tb-planning/2020-October/008030.html">much more</a>.') }}
-        </li>
-      </ul>
-    </aside>
-    <aside>
-      <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
-      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
-        <li>
-          {{ _('Dedication to open source and open standards.') }}
-        </li>
-        <li>
-          {{ _('Substantial understanding of web technologies.') }}
-        </li>
-        <li>
-          {{ _('Demonstrated ability of developing with JavaScript/HTML/CSS.') }}
-        </li>
-        <li>
-          {{ _('Knowledge of C/C++ is a plus.') }}
-        </li>
-        <li>
-          {{ _('Effective and creative problem-solving skills.') }}
-        </li>
-      </ul>
-      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
-      </p>
-      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
+      <a href="https://www.mozilla.org/en-US/careers/position/gh/3570085/" class="btn-join self-start">{{ _('Apply Here') }}</a>
     </aside>
   </section>
 
@@ -300,13 +148,13 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('If a position sounds like a good fit for you, please send us your resume with a cover letter to <a href="mailto:%(jobs_email)s">jobs@thunderbird.net</a>. In the subject of the email, please state the title of the position that you’re applying for, e.g. <strong>“Application for the Thunderbird Software Engineer position”</strong>.')|format(jobs_email='jobs@thunderbird.net') }}
+          {{ _('If a position sounds like a good fit for you, apply on the <a href="https://careers.mozilla.org">Mozilla career portal</a> using the "Apply Here" button below each position. All Thunderbird jobs appear under the Mozilla Foundation and will include Thunderbird in the job title.') }}
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('A cover letter is essential to your application! Tell us about why you’re passionate about Thunderbird and this position. Also include samples of your work, either directly or as a link. If you contribute to any open source software, or maintain a blog we’d love to hear about it!') }}
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('The successful applicant will be hired through MZLA Technologies Corporation. Your work will be directed through the Thunderbird project’s technical manager. By applying for this job, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
+          {{ _('The successful applicant will be hired through MZLA Technologies Corporation, a subsidiary of the Mozilla Foundation. By applying to our jobs, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
         </p>
       </aside>
     </section>
