Link directly to Mozilla job listings on careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -148,7 +148,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('If a position sounds like a good fit for you, apply on the <a href="https://careers.mozilla.org">Mozilla career portal</a> using the "Apply Here" button below each position. All Thunderbird jobs appear under the Mozilla Foundation and will include Thunderbird in the job title.') }}
+          {{ _('If a position sounds like a good fit for you, apply on the <a href="https://www.mozilla.org/careers/listings/">Mozilla career portal</a> using the "Apply Here" button below each position. All Thunderbird jobs appear under the Mozilla Foundation and will include Thunderbird in the job title.') }}
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('A cover letter is essential to your application! Tell us about why you’re passionate about Thunderbird and this position. Also include samples of your work, either directly or as a link. If you contribute to any open source software, or maintain a blog we’d love to hear about it!') }}
