--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
       <p class="font-md p-3 m-0">
         {{ _('<span class="font-semibold">Want to try new features early?</span> Get the beta and be a part of the future of Thunderbird!') }}
       </p>
-      <a href="https://support.mozilla.org/kb/thunderbird-beta" class="btn-beta rounded-full pt-2 pb-2 pr-3 pl-3 mb-0">{{ _('Get the Beta') }}</a>
+      <a href="https://support.mozilla.org/kb/thunderbird-beta" class="btn-beta btn-beta-pill">{{ _('Get the Beta') }}</a>
     </div>
   </section>
   <section class="hidden md:flex max-w-6xl self-center">
