Copy edit beta download page.

--- a/website/download/beta/index.html
+++ b/website/download/beta/index.html
@@ -21,7 +21,7 @@
         <a href="#resources" class="btn-link">{{ _('Resources and Assistance') }}</a>
       </li>
       <li class="ml-2 mr-2">
-        <a href="#uninstall" class="btn-link">{{ _('How do I uninstall Beta and go back to regular release?') }}</a>
+        <a href="#uninstall" class="btn-link">{{ _('How do I go back to the regular release version?') }}</a>
       </li>
     </ul>
   </nav>
@@ -122,7 +122,7 @@
 
   <section id="uninstall" class="mt-4 mb-4 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
-    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('How do I uninstall Beta and go back to regular release?') }}</h2>
+    <h2 class="header-section pl-4 pr-4 mb-0 text-center">{{ _('How do I go back to the regular release version?') }}</h2>
     <span class="header-line flex-1"></span>
   </section>
 
